--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gallery",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://monika-ghimire.github.io/image-gallery",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
@@ -11,8 +12,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "homepage": "https://monika-ghimire.github.io/image-gallery"
+    "web-vitals": "^2.1.4"
+    
   },
   "scripts": {
     "predeploy": "npm run build",
